--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,28 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OPSAT"
+             xmlns:viewModel="clr-namespace:OPSAT.MVVM.ViewModel" 
+             xmlns:view="clr-namespace:OPSAT.MVVM.View" 
              StartupUri="MainWindow.xaml">
+    <!--xmlns : permet d'acceder au namespace en x:type...-->
     <Application.Resources>
+
+
+            <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        
          
+            <!--data template-->
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ConvertisseurViewModel}">
+                <view:ConvertisseurView/>
+            </DataTemplate>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
